--- a/public/index.html
+++ b/public/index.html
@@ -3,31 +3,32 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<meta content="width=device-width,initial-scale=1.0" name="viewport">
 
-	<link rel="icon" href="<%= BASE_URL %>favicon/favicon.ico">
+	<link href="<%= BASE_URL %>favicon/favicon.ico" rel="icon">
 
-	<link rel="apple-touch-icon" sizes="57x57" href="<%= BASE_URL %>favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>favicon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="<%= BASE_URL %>favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="<%= BASE_URL %>favicon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="<%= BASE_URL %>favicon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="<%= BASE_URL %>favicon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="<%= BASE_URL %>favicon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>favicon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="<%= BASE_URL %>favicon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>favicon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon/favicon-16x16.png">
+	<link href="<%= BASE_URL %>favicon/apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
+	<link href="<%= BASE_URL %>favicon/apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
+	<link href="<%= BASE_URL %>favicon/apple-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
+	<link href="<%= BASE_URL %>favicon/apple-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+	<link href="<%= BASE_URL %>favicon/apple-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+	<link href="<%= BASE_URL %>favicon/apple-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+	<link href="<%= BASE_URL %>favicon/apple-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
+	<link href="<%= BASE_URL %>favicon/apple-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+	<link href="<%= BASE_URL %>favicon/apple-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
+	<link href="<%= BASE_URL %>favicon/android-icon-192x192.png" rel="icon" sizes="192x192"  type="image/png">
+	<link href="<%= BASE_URL %>favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+	<link href="<%= BASE_URL %>favicon/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png">
+	<link href="<%= BASE_URL %>favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
 
 	<!-- OG Meta Tags -->
-	<meta property="og:url" content="https://foxartbox.com/">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="FOXARTBOX - fast websites">
-	<meta property="og:image" content="<%= BASE_URL %>avatar.jpg">
-	<meta property="og:description" content="Fast & adaptive websites by Denis FOX">
+	<meta content="https://foxartbox.com/" property="og:url">
+	<meta content="website" property="og:type">
+	<meta content="FOXARTBOX - fast websites" property="og:title">
+	<meta content="<%= BASE_URL %>avatar.jpg" property="og:image">
+	<meta content="Fast & adaptive websites by Denis FOX" property="og:description">
+	<meta content="Fast & adaptive websites by Denis FOX" name="description">
 
 	<title><%= htmlWebpackPlugin.options.title %></title>
 </head>
